# python-xxhash

./: .appveyor.py  .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  Pipfile  README.rst  appveyor.yml  bench.sh  ffibuild.py  mypy.ini  pyproject.toml  python-xxhash.c  setup.py  sizes.c  typecheck.sh
.github/workflows/: build.yml  codspeed.yml  test.yml
src/: _xxhash.c
tests/: test.py  test_algorithms_available.py  test_benchmark.py  test_fastcall.py  test_hashlib_compat.py  test_interpreters.py  test_refcount.py  test_stubs_pyright.py  test_subinterpreter.py  test_thread_safety.py  test_threadsafe_api.py  test_xxh32.py  test_xxh3_128.py  test_xxh3_64.py  test_xxh64.py
xxhash/: __init__.py  __init__.pyi  cffi.py  cpython.c  threadsafe.py  version.py
