[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build-frontend = "build[uv]"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux_{ppc64le,riscv64,s390x}"
build-frontend = "build"

[[tool.cibuildwheel.overrides]]
select = "*-ios*"
build-frontend = "build"
