[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
enable = ["pypy", "pypy-eol", "graalpy"]
build-frontend = "build[uv]"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux_{ppc64le,riscv64,s390x}"
build-frontend = "build"

[[tool.cibuildwheel.overrides]]
select = "*-ios*"
build-frontend = "build"

[tool.mypy]
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
# disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
pretty = true
error_summary = false
